--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "firebase": "^9.23.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
